# elementor-full-mcp

./: .gitattributes  .gitignore  .wp-env.json  Makefile  README.md
ci-helpers/: elementor-cli-shim.php
mcp-server/: .env.example  pyproject.toml
mcp-server/elementor_mcp/: __init__.py  config.py  envelope.py  errors.py  server.py
mcp-server/elementor_mcp/core/: wp_client.py
mcp-server/elementor_mcp/core/image/: media_upload.py  openai_gen.py  slot.py  unsplash_fallback.py
mcp-server/elementor_mcp/data/: schema.sql
mcp-server/elementor_mcp/scripts/: build_index.py
mcp-server/elementor_mcp/tools/: auth.py  image.py  kit.py  page.py  profile.py  section.py  template.py
mcp-server/tests/: conftest.py
mcp-server/tests/integration/: conftest.py  test_auth_verify.py  test_image_roundtrip.py  test_normalize_apply.py  test_p1a_end_to_end.py
mcp-server/tests/unit/: test_build_index_cli.py  test_color_distance.py  test_config.py  test_envelope.py  test_image_openai.py  test_image_slot.py  test_image_unsplash.py  test_image_upload.py  test_kit_promote_custom_colors.py  test_library_categorizer.py  test_library_db.py  test_library_extractor.py  test_library_search.py  test_library_validator.py  test_normalize_golden.py  test_normalizer_color.py  test_normalizer_diff.py  test_normalizer_font.py  test_normalizer_layout_buttons.py  test_normalizer_typography.py  test_section_add_normalizes.py  test_tools_auth.py  test_tools_image.py  test_tools_kit.py  test_tools_page.py  test_tools_profile.py  test_tools_section.py  test_tools_template.py  test_wp_client.py
(+3062 files in other folders)
