[project]
name = "elementor-mcp"
version = "0.0.1"
description = "MCP server for Elementor page authoring"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.0.0",
  "httpx>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "responses>=0.25",
  "ruff>=0.4",
]

[project.scripts]
elementor-mcp = "elementor_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
